src/objects/BVAT_Farmer__c.object
<CustomObject>
    <description>BVAT Farmer</description>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>Education Level</description>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farm_Size__c</fullName>
        <description>Size of Farm</description>
        <label>Farm Size</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farming_Reason__c</fullName>
        <description>Farm for Food or Market</description>
        <label>Farming Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Consumption</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumption and Selling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <description>GPS Location</description>
        <label>GPS Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Activity__c</fullName>
        <description>Main Group Activity</description>
        <label>Group Activity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Name of the Farmer Group</description>
        <label>Group Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Receives_TOF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the group receive the TOF Magazine</description>
        <label>Group Receives TOF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <description>No of members in the group</description>
        <label>Group Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Farmer_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Belongs to a Farmer Group</description>
        <label>Has Farmer Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>Personal Details of the Farmer</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>BVAT Farmers</relationshipLabel>
        <relationshipName>BVAT_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Registered By</label>
        <referenceTo>CIW__c</referenceTo>
        <relationshipLabel>BVAT Farmers</relationshipLabel>
        <relationshipName>BVAT_Farmers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Years_Of_Farming__c</fullName>
        <description>Length of Farming</description>
        <label>Years Of Farming</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BVAT Farmer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>Education_Level__c</columns>
        <columns>Farming_Reason__c</columns>
        <columns>Farm_Size__c</columns>
        <columns>Years_Of_Farming__c</columns>
        <columns>Has_Farmer_Group__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Group_Activity__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Group_Receives_TOF__c</columns>
        <columns>GPS_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BF-{0000000}</displayFormat>
        <label>BVAT Farmer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BVAT Farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>